# construct

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.gemini/agents/: acp-expert.md  mcp-expert.md  tauri-developer.md  ui-ux-designer.md
.gemini/agents/acp-expert/: agent.md  rust-patterns.md
.gemini/agents/tauri-developer/: agent.md
.gemini/agents/tauri-developer/references/: best-practices.md  mcp-setup.md
apps/frontend/: components.json  index.html  package.json  tailwind.config.js  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
apps/frontend/src-tauri/: Cargo.toml  Tauri.toml
apps/frontend/src-tauri/migrations/: 1.sql  2.sql  3.sql  4.sql  5.sql
apps/frontend/src-tauri/src/: lib.rs  main.rs  mcp.rs
apps/frontend/src/components/: AddAgentDialog.tsx  AddProjectDialog.tsx  AddTicketDialog.tsx  AddWorkspaceDialog.tsx  DiffViewerDialog.tsx
apps/frontend/src/routes/: __root.tsx  agents.$agentId.tsx  agents.tsx  index.tsx  projects.tsx  tickets.$ticketId.tsx  tickets.index.tsx  tickets.tsx
apps/frontend/src/services/: database.ts
plans/: 00-CONSTRUCT.md  01-INITIALIZATION.md  02-CORE_UI.md  03-GIT_WORKTREE.md  04-AGENT_ACP.md  05-CODE_REVIEW.md  06-MANAGER_AUTOMATION.md  07-UI_LAYOUT_REFACTOR.md  08-MARKDOWN_SUPPORT.md
skills/acp-client-expert/: SKILL.md
skills/acp-client-expert/references/: agents.md  spec.md
