[package]
name = "frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-mcp-bridge = "0.11"
rust-git = { path = "../../../packages/rust-git" }
rust-acp = { path = "../../../packages/rust-acp" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8.9"
tower-http = "0.6.10"
tower = "0.5.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
futures = "0.3"
anyhow = "1"
agent-client-protocol = "0.11"
